--- a/Likes_Counter_Program.ipynb
+++ b/Likes_Counter_Program.ipynb
@@ -31,7 +31,7 @@
         "except:\n",
         "    pass\n",
         "\n",
-        "print(total_likes)"
+        "print(f'jumlah like adalah:{total_likes}')"
       ]
     }
   ],
